--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       gtag('config', 'G-Z0MDV0WB2D');
     </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <img src="../src/assets/logo.jpg" alt="NewSpark Logo" style="display: none;" id="site-logo" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
